prevent line break in icons

--- a/src/styles/homepage.less
+++ b/src/styles/homepage.less
@@ -7,6 +7,7 @@
     top: -3em;
     font-size: 2em;
     ul {
+	white-space: nowrap;
 	list-style: none;
 	li {
 	    display: inline-block;
